// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Logo /> render with className 1`] = `
<img
  alt=""
  className="something"
  src="http://star-wars.com/image.jpg"
/>
`;

exports[`<Logo /> render without className 1`] = `
<img
  alt=""
  className=""
  src="http://star-wars.com/image.jpg"
/>
`;
